[metadata]
name = forch
summary = The Faucet Orchestrator for controlling and monitoring a faucet network.
license = Apache-2
author = Forch development team
author-email = faucet-dev@google.com
platform = any
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Topic :: System :: Networking
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Operating System :: Unix
[files]
packages =
    forch

[pytype]
python_version = 3.6
pythonpath =
    .:
